# fennec

./: README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_signal_store.py  0002_org_rules.py
ci/gitlab/: fennec.gitlab-ci.yml
docs/: index.md
fennec/: cli.py
fennec/ci/: __init__.py  github.py  gitlab.py  scanner.py
fennec/engine/: __init__.py  cost.py  loop.py
fennec/graph/: __init__.py  client.py  queries.py  schema.py
fennec/llm/: __init__.py  client.py  renderer.py  response.py  templates.py
fennec/output/: __init__.py  jira.py  model.py  pr_comment.py  sarif.py
fennec/parsers/: __init__.py  base.py  detector.py  emitter.py  go_parser.py  javascript_parser.py  python_parser.py
fennec/rules/: __init__.py  dry_run.py  loader.py  schema.py  suggest.py
fennec/sharing/: __init__.py  api.py  client.py
fennec/signal/: __init__.py  models.py  propagation.py  store.py
openspec/: config.yaml
tests/ci/: test_github.py  test_scan_cli.py
tests/engine/: test_cost.py  test_integration.py  test_loop.py
tests/graph/: conftest.py  test_crud.py  test_incremental.py  test_schema.py  test_traversal.py
tests/llm/: test_integration.py  test_renderer.py  test_response.py  test_templates.py
tests/output/: conftest.py  test_jira.py  test_model.py  test_pr_comment.py  test_sarif.py
tests/parsers/: test_detector.py  test_emitter.py  test_go_parser.py  test_js_parser.py  test_python_parser.py
tests/rules/: test_dry_run.py  test_schema.py
tests/sharing/: test_api.py  test_client.py  test_merge.py  (+1 more)
(+87 files in other folders)
