[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fennec"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["fennec"]
