[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fennec"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
fennec = "fennec.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["fennec"]
